--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
-    <string name="app_name">RollDice</string>
+    <string name="app_name">RollDice2</string>
     <string name="roll_label">Roll</string>
 </resources>
